@@ -5,9 +5,13 @@ ENV shell="/usr/bin/jshell"
 VOLUME /tmp
 WORKDIR /opt/cloudterm/
 COPY target/cloudterm.jar .
+COPY java.policy .
 RUN useradd -ms /bin/bash tryjshell
-COPY ./restrict_fs.sh .
-RUN ./restrict_fs.sh
+RUN chmod -R  a-w / || true /
+    chmod -R  a+w /tmp || true /
+    chmod -R  a+w /home/tryjshell/ || true /
+    chmod -R  a+x /usr/bin/java || true /
+    chmod -R  a+x /usr/bin/jshell || true
 USER tryjshell
-CMD ["java","-jar","./cloudterm.jar"]
+CMD ["java","-Djava.security.manager","-Djava.security.policy=java.policy","-jar","./cloudterm.jar"]
 EXPOSE 8080
